--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "latest",
     "lucide-react": "^0.562.0",
     "next": "latest",
+    "openai": "^6.15.0",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "latest"
