--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lucide-react": "^0.562.0",
     "next": "latest",
     "openai": "^6.15.0",
+    "razorpay": "^2.9.6",
     "react": "latest",
     "react-dom": "latest",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
