--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "latest",
     "date-fns": "latest",
     "framer-motion": "latest",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.562.0",
     "next": "latest",
     "openai": "^6.15.0",
